# zat

./: LICENSE  Makefile  README.md  cli.py  main.py  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml  publish.yml  python-package.yml
docs/: contributing.md
examples/: anomaly_detection.py  anomaly_detection_streaming.py  cert_checker.py  file_log_vtquery.py  http_user_agents.py  kafka_print.py  kafka_risky_dns.py  kafka_spark.py  pandas_whitelist.py  risky_dns.py  tor_and_port_count.py  yara_matches.py  zeek_json_to_pandas.py  zeek_pprint.py  zeek_to_csv.py  zeek_to_pandas.py  zeek_to_parquet.py  zeek_to_parquet_with_spark.py  zeek_to_scikit.py
explorations/: kafka_router.py
zat/: __init__.py  base.py  data_generator.py  dataframe_cache.py  dataframe_stats.py  dataframe_to_matrix.py  json_log_to_dataframe.py  live_simulator.py  log_to_dask.py  log_to_dataframe.py  log_to_polars.py  log_to_sparkdf.py  zat.py  zeek_log_reader.py  zeek_multi_log_reader.py  zeek_to_dask.py
zat/utils/: __init__.py  cache.py  dir_watcher.py  field_info.py  file_storage.py  file_tailer.py  file_utils.py  geo_lookup.py  net_utils.py  ngrams.py  plot_utils.py  reverse_dns.py  signal_utils.py  vt_query.py
zatv2/: base.py  converter.py  reader.py  test_converter.py  to_dask.py  to_pandas.py  to_polars.py  to_spark.py  zat.py
